--- a/app/src/main/res/layout/activity_nurse_view.xml
+++ b/app/src/main/res/layout/activity_nurse_view.xml
@@ -36,12 +36,16 @@
         android:id="@+id/timeSlotInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:hint="Enter Time Slot (e.g., 10:00 AM)"
+        android:layout_marginTop="4dp"
+        android:hint="Select Time Slot (8 AM - 4 PM)"
+        android:focusable="false"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/consultationTypeSpinner" />
+        app:layout_constraintTop_toBottomOf="@id/consultationTypeSpinner"
+        app:layout_constraintVertical_bias="0.0" />
+
 
     <!-- Add Slot Button -->
     <Button
@@ -89,4 +93,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/arrow_left" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewAppointments"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"/>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
