--- a/app/src/main/res/layout/activity_student_view.xml
+++ b/app/src/main/res/layout/activity_student_view.xml
@@ -10,37 +10,62 @@
 
     <!-- Available Slots Spinner -->
 
+    <!-- Appointment Type Spinner -->
+
+    <!-- Reason for Visit Input -->
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.117" />
 
     <Spinner
-        android:id="@+id/availableSlotsSpinner"
+        android:id="@+id/appointmentTypeSpinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:hint="Select Available Slot"
+        android:hint="Select Appointment Type"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/calendarView" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.584" />
+
+    <!-- Time Slot Input (EditText for TimePicker) -->
 
     <EditText
         android:id="@+id/reasonInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="12dp"
         android:hint="Reason for Visit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appointmentTypeSpinner"
+        app:layout_constraintVertical_bias="0.004" />
+
+    <!-- Confirm Booking Button -->
+
+    <!-- Back Button -->
+    <EditText
+        android:id="@+id/timeSlotInput"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:hint="Select Time Slot (8 AM - 4 PM)"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/availableSlotsSpinner" />
+        app:layout_constraintTop_toBottomOf="@id/reasonInput"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/confirmBookingButton"
@@ -48,10 +73,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Confirm Booking"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.562"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/reasonInput" />
+        app:layout_constraintTop_toBottomOf="@id/timeSlotInput" />
 
     <ImageView
         android:id="@+id/backButton"
@@ -65,7 +90,4 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/arrow_left" />
 
-    <!-- Reason for Visit Input -->
-
-    <!-- Confirm Booking Button -->
 </androidx.constraintlayout.widget.ConstraintLayout>
