--- a/app/src/main/res/layout/activity_nurse_home.xml
+++ b/app/src/main/res/layout/activity_nurse_home.xml
@@ -11,11 +11,12 @@
     <!-- Header Section -->
 
     <!-- Appointment Setter Button -->
+
     <TextView
         android:id="@+id/nurseWelcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="120dp"
         android:gravity="center"
         android:text="Welcome, Nurse!"
         android:textColor="@color/black"
@@ -27,46 +28,56 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnImmediateCare"
+        android:id="@+id/btnAvailableAppointments"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_margin="20dp"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="@color/red"
-        android:text="🚑 Immediate Health Care"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/purple_500"
+        android:text="📅 View Available Appointments"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnAppointmentSetter" />
-
-    <Button
-        android:id="@+id/btnStudentRecords"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_margin="20dp"
-        android:layout_marginTop="36dp"
-        android:backgroundTint="@color/green"
-        android:text="📋 Student Records"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.475"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnImmediateCare" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAppointmentSetter" />
 
     <Button
         android:id="@+id/btnAppointmentSetter"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_margin="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="@color/blue"
         android:text="📅 Appointment Setter"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nurseWelcomeText" />
+
+    <Button
+        android:id="@+id/btnStudentRecords"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/green"
+        android:text="📋 Student Records"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAvailableAppointments" />
+
+    <Button
+        android:id="@+id/btnImmediateCare"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_margin="20dp"
+        android:backgroundTint="@color/red"
+        android:text="🚑 Immediate Health Care"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnStudentRecords" />
 
     <!-- Immediate Health Care Button -->
 
@@ -81,18 +92,6 @@
         android:backgroundTint="@color/dark_red"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="20dp"/>
-
-    <Button
-        android:id="@+id/btnAvailableAppointments"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:text="📅 View Available Appointments"
-        android:backgroundTint="@color/purple_500"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/btnStudentRecords"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="20dp"/>
