--- a/app/src/main/res/layout/activity_student_view.xml
+++ b/app/src/main/res/layout/activity_student_view.xml
@@ -4,20 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#5A8A86"
     tools:context=".StudentView">
-
-    <!-- Calendar View -->
-
-    <!-- Available Slots Spinner -->
-
-    <!-- Appointment Type Spinner -->
-
-    <!-- Reason for Visit Input -->
 
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="410dp"
         android:layout_height="213dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -33,6 +27,7 @@
         android:id="@+id/appointmentTypeSpinner"
         android:layout_width="413dp"
         android:layout_height="49dp"
+        android:layout_marginTop="50dp"
         android:hint="Select Appointment Type"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +41,7 @@
         android:id="@+id/reasonInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="90dp"
         android:hint="Reason for Visit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +54,7 @@
         android:id="@+id/confirmBookingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="160dp"
         android:text="Confirm Booking"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +66,8 @@
         android:id="@+id/slotsListView"
         android:layout_width="361dp"
         android:layout_height="177dp"
+        android:layout_marginTop="30dp"
+        android:foregroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/reasonInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,5 +97,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appointmentTypeSpinner" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="227dp"
+        android:layout_height="28dp"
+        android:text="BOOK APPOINTMENT"
+        android:textAlignment="center"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/calendarView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView9" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
