--- a/app/src/main/res/layout/activity_student_records.xml
+++ b/app/src/main/res/layout/activity_student_records.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#5A8A86"
     tools:context=".StudentRecordsActivity">
 
     <!-- Spinner for selecting consultation type -->
@@ -21,16 +22,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/studentRecordsListView"
-        android:layout_width="388dp"
-        android:layout_height="431dp"
+    <FrameLayout
+        android:layout_width="385dp"
+        android:layout_height="612dp"
+        android:background="@android:color/darker_gray"
+        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/consultationTypeSpinner"
-        app:layout_constraintVertical_bias="0.831" />
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintVertical_bias="0.831">
+
+        <ListView
+            android:id="@+id/studentRecordsListView"
+            android:layout_width="385dp"
+            android:layout_height="578dp"
+            android:background="@android:color/white" />
+    </FrameLayout>
+
 
     <Button
         android:id="@+id/backButton"
