--- a/app/src/main/res/layout/activity_available_appointments.xml
+++ b/app/src/main/res/layout/activity_available_appointments.xml
@@ -35,7 +35,7 @@
             android:id="@+id/appointmentsListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white"/>
+            android:background="@color/material_dynamic_neutral40"/>
     </FrameLayout>
 
 
