--- a/app/src/main/res/layout/activity_nurse_view.xml
+++ b/app/src/main/res/layout/activity_nurse_view.xml
@@ -87,7 +87,7 @@
             android:id="@+id/slotsListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white"/>
+            android:background="@color/material_dynamic_neutral40"/>
     </FrameLayout>
 
 
