--- a/app/src/main/res/layout/activity_student_view.xml
+++ b/app/src/main/res/layout/activity_student_view.xml
@@ -23,19 +23,18 @@
 
     <!-- Back Button -->
 
+
     <Spinner
         android:id="@+id/appointmentTypeSpinner"
         android:layout_width="413dp"
         android:layout_height="49dp"
-        android:layout_marginTop="50dp"
         android:hint="Select Appointment Type"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.363" />
-
+        app:layout_constraintTop_toBottomOf="@+id/calendarView"
+        app:layout_constraintVertical_bias="0.027" />
 
     <EditText
         android:id="@+id/reasonInput"
@@ -54,13 +53,12 @@
         android:id="@+id/confirmBookingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
         android:text="Confirm Booking"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.888" />
+        app:layout_constraintTop_toBottomOf="@+id/reasonInput"
+        app:layout_constraintVertical_bias="0.152" />
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -79,7 +77,7 @@
             android:id="@+id/slotsListView"
             android:layout_width="361dp"
             android:layout_height="177dp"
-            android:background="@android:color/white"
+            android:background="@color/material_dynamic_neutral40"
             android:foregroundTint="@color/black" />
     </FrameLayout>
 
