--- a/app/src/main/res/layout/activity_nurse_view.xml
+++ b/app/src/main/res/layout/activity_nurse_view.xml
@@ -10,17 +10,19 @@
     tools:layout_editor_absoluteY="-65dp">
 
     <!-- Calendar View -->
+
+    <!-- Appointment Type Spinner -->
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_width="388dp"
+        android:layout_height="327dp"
+        android:layout_marginTop="64dp"
+        android:background="#009688"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Appointment Type Spinner -->
     <Spinner
         android:id="@+id/consultationTypeSpinner"
         android:layout_width="0dp"
@@ -61,35 +63,36 @@
         app:layout_constraintTop_toBottomOf="@id/timeSlotInput" />
 
     <!-- List of Existing Slots -->
+
     <TextView
         android:id="@+id/existingSlotsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:text="Existing Slots"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addSlotButton" />
 
+
     <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="391dp"
+        android:layout_height="97dp"
         android:background="@android:color/darker_gray"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/existingSlotsLabel"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.483">
 
         <ListView
             android:id="@+id/slotsListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/material_dynamic_neutral40"/>
+            android:background="@color/material_dynamic_neutral40" />
     </FrameLayout>
-
 
     <ImageView
         android:id="@+id/backButton"
