--- a/app/src/main/res/layout/activity_available_appointments.xml
+++ b/app/src/main/res/layout/activity_available_appointments.xml
@@ -10,14 +10,27 @@
     <!-- Spinner for Consultation Type -->
 
     <!-- ListView to display appointments -->
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Student Appointments"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/consultationTypeSpinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Spinner
         android:id="@+id/consultationTypeSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="68dp"
         android:hint="Select Consultation Type"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.607"
+        app:layout_constraintHorizontal_bias="0.593"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,8 +55,8 @@
     <!-- Back Button -->
     <Button
         android:id="@+id/backButton"
-        android:layout_width="92dp"
-        android:layout_height="38dp"
+        android:layout_width="78dp"
+        android:layout_height="40dp"
         android:layout_marginTop="4dp"
         android:text="Back"
         app:layout_constraintEnd_toEndOf="parent"
